<resources>

    <string name="app_name">Easy Code</string>

    <string name="action_settings">Settings</string>
    <string name="drawer_open">open</string>
    <string name="drawer_close">close</string>

    <string name="item_home">Home</string>
    <string name="item_courses">Courses</string>
    <string name="item_team">Team</string>
    <string name="item_about_us">About us</string>

    <!-- ActionBar items -->
    <string name="action_social">Social Groups</string>
    <string name="action_social_vk">Vkontakte</string>
    <string name="action_social_fb">Facebook</string>
    <string name="action_social_gplus">Google Plus</string>
    <string name="action_request_route">Get route</string>
    <string name="action_animate_route">Animate route</string>

    <!-- Courses names -->
    <string name="course_java">Course foundations of JAVA</string>
    <string name="course_layout">Course Layout</string>
    <string name="course_php">Course PHP/MYSQL/AJAX</string>
    <string name="course_java_script">Course JavaScript</string>
    <string name="course_photoshop">Course Photoshop</string>
    <string name="course_seo">Course Internet Marketing, SEO, Context, CMM</string>
    <string name="course_wordpress">Advanced course WordPress</string>

    <!-- Team -->
    <string name="team_name_denis_layout">Denis Mesheryakov</string>
    <string name="team_about_denis_layout">Curator of course:\nHTML and CSS layout</string>

    <string name="team_name_evgenij_php">Evgenij Degtyaryov</string>
    <string name="team_about_evgenij_php">Curator of course:\nPHP/MYSQL/AJAX</string>

    <string name="team_name_artem_wordpress">Artem Kondranin</string>
    <string name="team_about_artem_wordpress">Curator of course:\nAdvanced WordPress</string>

    <string name="team_name_sveta_marketing">Svetlana Mesheryakova</string>
    <string name="team_about_sveta_marketing">Curator of course:\nReal Marketing</string>

    <string name="team_name_julia_kopiraiter">Julia Chernaya</string>
    <string name="team_about_julia_kopiraiter">Curator of course:\nDifficult Copywriting</string>

    <string name="team_name_mihail_social_networks">Mihail Chebanenko</string>
    <string name="team_about_mihail_social_networks">Curator of:\nour groups social networks</string>

    <string name="team_name_andrey_photoshop">Andrey Dushenko</string>
    <string name="team_about_andrey_photoshop">Curator of course:\nPhothoShop</string>

    <string name="team_name_julia_english">Julia Chekmenyova</string>
    <string name="team_about_julia_english">Curator of course:\nEnglish language</string>

    <!-- Toasts -->
    <string name="toast_exit">Press back again to exit!</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_course_about">CourseAboutActivity</string>
    <string name="toast_location_not_available">Cannot get your location. Please, try again later!</string>

    <!-- URL's -->

</resources>
