<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/drawer_home"
            android:checked="false"
            android:title="@string/item_home"
            android:icon="@drawable/ic_home_black_48dp"/>

        <item
            android:id="@+id/drawer_courses"
            android:checked="false"
            android:title="@string/item_courses"
            android:icon="@drawable/ic_laptop_windows_black_48dp"/>

        <item
            android:id="@+id/drawer_team"
            android:checked="false"
            android:title="@string/item_team"
            android:icon="@drawable/ic_people_black_48dp"/>

        <item
            android:id="@+id/drawer_about"
            android:checked="false"
            android:title="@string/item_about_us"
            android:icon="@drawable/ic_info_outline_black_48dp"/>
    </group>
</menu>